SERVER-17978 Sparse index discriminator for PlanCacheIndexabilityState

Adds additional encoding to the plan cache key for {$eq: null}
predicates (and equivalent) if a sparse index is present for the field
in question.